tests/valid/all_types.alu
function () do
begin
int x = 42;
bool flag = false;
char letter = 'Z';
string message = "Complete test";
end
test
