tests/invalid/wrong_list_type.alu
function () do
begin
int a = 1;
bool b = true;
list nums = [a, b];
end
test

